--- a/2025.10.15/package.json
+++ b/2025.10.15/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^5.1.0"
+    "express": "^5.1.0",
+    "mime-types": "^3.0.1"
   }
 }
